# langgraph_cx

./: .env  .gitignore  0_test_installation.ipynb  1_bmi_workflow.ipynb  2_simple_llm_workflow.ipynb  3_prompt_chaining.ipynb  4_parallel_workflow_batsman_workflow.ipynb  5_UPSC_Parallel_Essay_workflow.ipynb  6_conditional_workflow_quadratic_equation.ipynb  7_conditional_workflow_review_reply.ipynb  8_X_post_generator_workflow.ipynb  9_basic_chatbot.ipynb  main.py  pyproject.toml
